--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
-﻿{
+{
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/"
+      "destination": "/index.html"
     }
   ]
 }
